--- a/styles/global.css
+++ b/styles/global.css
@@ -10,8 +10,8 @@
 html,
 body {
   overflow: hidden;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100%;
+  max-height: 100%;
 }
 
 .environment-select-wrapper
